@@ -1,17 +1,0 @@
-branches:
-  except:
-    - /travis/
-skip_tags: true
-
-cache:
-  - C:\strawberry
-
-install:
-  - if not exist "C:\strawberry" cinst strawberryperl
-  - set PATH=C:\strawberry\perl\bin;C:\strawberry\perl\site\bin;C:\strawberry\c\bin;%PATH%
-  - cd C:\projects\%APPVEYOR_PROJECT_NAME%
-  - cpanm --installdeps .
-
-build_script:
-  - perl Makefile.PL
-  - gmake test
